turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: not found: value color
 if( getCouleurSol() == color.White )
                        ^LangtonsAnt:5: error: not found: value color
 	setCouleurBrosse(color.Black)
                         ^