turmites.lessons.turmites.langton.Langton.scala.code
def step() {

 if( getCouleurSol() == color.White )
 {
 	setCouleurBrosse(color.Black)
 	baisseBrosse()
 	leveBrosse()
 	droite()
 	avance()
 }
}
